Self description added

--- a/Entrega 0-Grupal.html
+++ b/Entrega 0-Grupal.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Quiénes somos?</title>
 </head>
+
 <body>
     <h1>¿Quiénes somos?</h1>
     <h2>Jóvenes a programar- Presentación de Grupo 6</h2>
@@ -13,10 +15,10 @@
         <div id="divimagenes" class="row">
             <table id="imagenestable1">
                 <tr id="trImg">
-                    <td><img ></td>
-                    <td><img ></td>
                     <td><img></td>
-                    <td><img ></td>
+                    <td><img></td>
+                    <td><img></td>
+                    <td><img></td>
                 </tr>
                 <tr>
                     <td><a href="Dayana">Dayana Ravelo</a></td>
@@ -37,11 +39,17 @@
     </section>
     <section id="Kevin">
         <h3>Bienvenido al perfil de Kevin</h3>
-    </section>  
+        <p>Hola!👋 Me llamo Kevin 🤵. Soy Bachiller de informática 👨‍🎓, me interesa la informática 💻, los videojuegos
+            🎮 y la tecnología en general. Me gusta la cocina 👨‍🍳, me gusta pasar tiempo viendo
+            películas 🎥, hacer amigos e intercambiar conocimiento!. Ser autodidacta es una de mis principales
+            actividades. Actualmente estudio desarrollo web en Jóvenes a Programar y lo hago con mucho entusiasmo! 😃
+        </p>
+    </section>
     <section id="Micaela">
         <h3>Bienvenido al perfil de Micaela</h3>
     </section>
 
-               
+
 </body>
+
 </html>
