--- a/Entrega 0-Grupal.html
+++ b/Entrega 0-Grupal.html
@@ -10,12 +10,12 @@
 
 <body>
     <h1>¿Quiénes somos?</h1>
-    <h2>Jóvenes a programar- Presentación de Grupo 6</h2>
+    <h2>JÓVENES A PROGRAMAR - Presentación de Grupo 6</h2>
     <section id="seccionimagenes">
         <div id="divimagenes" class="row">
             <table id="imagenestable1">
                 <tr id="trImg">
-                    <td><img></td>
+                    <td><img src="img/Dayana.jpg" alt ="" width="100" height="150" ></td>
                     <td><img></td>
                     <td><img></td>
                     <td><img></td>
@@ -32,7 +32,13 @@
 
     <section id="Dayana">
         <h3>Bienvenido al perfil de Dayana</h3>
-        <p></p> <!-- lugar , edad , que estudias o porque estas en jap-->
+        <p>Hola, mi nombre es Dayana, pero todos me dicen "Day". Estudié Ingeniería en Sistemas en la FING, 
+            pero abandoné la carrera hace unos años. De todos modos, quería insertarme en el rubro laboral IT, 
+            por lo que continué estudiando por mi cuenta. Actualmente trabajo como Desarrolladora Backend utilizando 
+            tecnologías JAVA. Además de estudiar Desarrollo Web en JAP, estoy cursando la Licenciatura en Comunicación
+            Audiovisual en la FIC, ya que una de mis pasiones es la fotografía. Afortunadamente también trabajo en este rubro
+            como fotógrafa deportiva. 
+        </p> 
     </section>
     <section id="Damian">
         <h3>Bienvenido al perfil de Damian</h3>
