--- a/Entrega 0-Grupal.html
+++ b/Entrega 0-Grupal.html
@@ -31,7 +31,7 @@
     </section>
 
     <section id="Dayana">
-        <h3>Bienvenido al perfil de Dayana</h3>
+        <h3>Bienvenid@ al perfil de Dayana</h3>
         <p>Hola, mi nombre es Dayana, pero todos me dicen "Day". Estudié Ingeniería en Sistemas en la FING, 
             pero abandoné la carrera hace unos años. De todos modos, quería insertarme en el rubro laboral IT, 
             por lo que continué estudiando por mi cuenta. Actualmente trabajo como Desarrolladora Backend utilizando 
@@ -41,10 +41,10 @@
         </p> 
     </section>
     <section id="Damian">
-        <h3>Bienvenido al perfil de Damian</h3>
+        <h3>Bienvenid@ al perfil de Damian</h3>
     </section>
     <section id="Kevin">
-        <h3>Bienvenido al perfil de Kevin</h3>
+        <h3>Bienvenid@ al perfil de Kevin</h3>
         <p>Hola!👋 Me llamo Kevin 🤵. Soy Bachiller de informática 👨‍🎓, me interesa la informática 💻, los videojuegos
             🎮 y la tecnología en general. Me gusta la cocina 👨‍🍳, me gusta pasar tiempo viendo
             películas 🎥, hacer amigos e intercambiar conocimiento!. Ser autodidacta es una de mis principales
@@ -52,7 +52,7 @@
         </p>
     </section>
     <section id="Micaela">
-        <h3>Bienvenido al perfil de Micaela</h3>
+        <h3>Bienvenid@ al perfil de Micaela</h3>
     </section>
 
 
