Photo added and other changes

--- a/Entrega 0-Grupal.html
+++ b/Entrega 0-Grupal.html
@@ -15,9 +15,9 @@
         <div id="divimagenes" class="row">
             <table id="imagenestable1">
                 <tr id="trImg">
-                    <td><img src="img/Dayana.jpg" alt ="" width="100" height="150" ></td>
+                    <td><img src="img/Dayana.jpg" alt="" width="80" height="100"></td>
                     <td><img></td>
-                    <td><img></td>
+                    <td><img src="img/Kevin.png" alt="" width="95" height="100"></td>
                     <td><img></td>
                 </tr>
                 <tr>
@@ -32,23 +32,26 @@
 
     <section id="Dayana">
         <h3>Bienvenid@ al perfil de Dayana</h3>
-        <p>Hola, mi nombre es Dayana, pero todos me dicen "Day". Estudié Ingeniería en Sistemas en la FING, 
-            pero abandoné la carrera hace unos años. De todos modos, quería insertarme en el rubro laboral IT, 
-            por lo que continué estudiando por mi cuenta. Actualmente trabajo como Desarrolladora Backend utilizando 
+        <p>Hola, mi nombre es Dayana, pero todos me dicen "Day". Estudié Ingeniería en Sistemas en la FING,
+            pero abandoné la carrera hace unos años. De todos modos, quería insertarme en el rubro laboral IT,
+            por lo que continué estudiando por mi cuenta. Actualmente trabajo como Desarrolladora Backend utilizando
             tecnologías JAVA. Además de estudiar Desarrollo Web en JAP, estoy cursando la Licenciatura en Comunicación
-            Audiovisual en la FIC, ya que una de mis pasiones es la fotografía. Afortunadamente también trabajo en este rubro
-            como fotógrafa deportiva. 
-        </p> 
+            Audiovisual en la FIC, ya que una de mis pasiones es la fotografía. Afortunadamente también trabajo en este
+            rubro
+            como fotógrafa deportiva.
+        </p>
     </section>
     <section id="Damian">
         <h3>Bienvenid@ al perfil de Damian</h3>
     </section>
     <section id="Kevin">
         <h3>Bienvenid@ al perfil de Kevin</h3>
-        <p>Hola!👋 Me llamo Kevin 🤵. Soy Bachiller de informática 👨‍🎓, me interesa la informática 💻, los videojuegos
-            🎮 y la tecnología en general. Me gusta la cocina 👨‍🍳, me gusta pasar tiempo viendo
-            películas 🎥, hacer amigos e intercambiar conocimiento!. Ser autodidacta es una de mis principales
-            actividades. Actualmente estudio desarrollo web en Jóvenes a Programar y lo hago con mucho entusiasmo! 😃
+        <p>Hola!👋 Me llamo Kevin soy de Montevideo, Bachiller de informática 👨‍🎓, mis intereses son la informática
+            💻, los
+            videojuegos 🎮 y la tecnología en general. Me gusta la cocina 👨‍🍳, pasar tiempo viendo películas
+            🎥, hacer amigos e intercambiar conocimiento!. Ser autodidacta es una de mis principales
+            actividades. Estudié Testing en el Centro de Ensayos de Software. Actualmente estudio desarrollo web en
+            Jóvenes a Programar y lo hago con mucho entusiasmo! 😃.
         </p>
     </section>
     <section id="Micaela">
