--- a/Entrega 0-Grupal.html
+++ b/Entrega 0-Grupal.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Quiénes somos?</title>
-</head>
+    <link href="estilos/estilos-entrega0.css" rel="stylesheet" type="text/css"> <!--agregué estilos -->
 
 <body>
     <h1>¿Quiénes somos?</h1>
@@ -18,13 +18,14 @@
                     <td><img></td>
                     <td><img></td>
                     <td><img></td>
-                    <td><img></td>
+                    <td><img src="img/entorno.jpg" alt="" id="mic"></td> <!-- imagen -->
                 </tr>
                 <tr>
-                    <td><a href="Dayana">Dayana Ravelo</a></td>
-                    <td><a href="Damian">Damian Alvarez</a></td>
-                    <td><a href="Kevin">Kevin Marmol </a></td>
-                    <td><a href="Micaela">Micaela Duarte</a></td>
+                    <td><a href="#Dayana">Dayana Ravelo</a></td>
+                    <td><a href="#Damian">Damian Alvarez</a></td>
+                    <td><a href="#Kevin">Kevin Marmol </a></td>
+                    <td><a href="#Micaela">Micaela Duarte</a></td>
+                    <!-- "#" en el href -->
                 </tr>
             </table>
         </div>
@@ -47,6 +48,10 @@
     </section>
     <section id="Micaela">
         <h3>Bienvenido al perfil de Micaela</h3>
+        Buenas a tod@s!! Mi nombre es Micaela, tengo 26 años y actualmente trabajo y estudio. Aparte de JAP y el inglés
+        de Voxy, también estoy haciendo inglés particular.
+        Comencé a estudiar con la idea de tener nuevos desafíos y salidas laborales, no he tenido experiencias laborales
+        en TI, pero hallo interesante todo lo que abarca y lo que uno va a prendiendo constantemente.
     </section>
 
 
