--- a/Entrega 0-Grupal.html
+++ b/Entrega 0-Grupal.html
@@ -69,6 +69,11 @@
             laborales
             en TI, pero hallo interesante todo lo que abarca y lo que uno va a prendiendo constantemente.</p>
     </section>
+     <section id="Damian">
+        <h3>Bienvenido al perfil de Damian</h3>
+        <p>lorem</p>
+    </section>
+
 
 
 </body>
