--- a/Entrega 0-Grupal.html
+++ b/Entrega 0-Grupal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="js/script1.js"></script>
-    <link rel="stylesheet" href="css/estilo1.css">
+    <link rel="stylesheet" href="estilos/estilo1.css">
     <title></title>
 </head>
 <body >
