--- a/Entrega 0-Grupal.html
+++ b/Entrega 0-Grupal.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="js/script1.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="estilos/estilo1.css">
     <link rel="stylesheet" href="estilos/estilos-entrega0.css">
     <link rel="stylesheet" href="estilos/sections.css">
@@ -12,7 +17,7 @@
 </head>
 
 <body>
-    <button type="menu"><a href="#header">Inicio</a></button>
+    <button type="button" class="btn btn-outline-warning"><a href="#header">Inicio</a></button>
 
     <section id="header">
         <h1 id="titulo">Bienvenidos a Equipo Seis</h1>
@@ -38,8 +43,8 @@
 
         <section id="Dayana" class="secciones">
             <h2 class="h2nombre">Bienvenid@ al perfil de Dayana</h2>
+            <img id="dimg" src="img/Dayana.jpg" alt="ImagenDayana">
             <div class="row">
-                <img src="img/Dayana.jpg" alt="ImagenDayana">
                 <p>Hola, mi nombre es Dayana, pero todos me dicen "Day". Estudié Ingeniería en Sistemas en la FING,
                     pero abandoné la carrera hace unos años. De todos modos, quería insertarme en el rubro laboral IT,
                     por lo que continué estudiando por mi cuenta. Actualmente trabajo como Desarrolladora Backend
@@ -56,8 +61,8 @@
 
         <section id="Kevin" class="secciones">
             <h2 class="h2nombre">Bienvenid@ al perfil de Kevin</h2>
+            <img src="img/Kevin.jpg" alt="ImagenKevin">
             <div class="row">
-                <img src="img/Kevin.jpg" alt="ImagenKevin">
                 <p>Hola!👋 Me llamo Kevin soy de Montevideo, Bachiller de informática 👨‍🎓, mis intereses son la
                     informática
                     💻, los
@@ -72,8 +77,8 @@
 
         <section id="Micaela" class="secciones">
             <h2 class="h2nombre">Bienvenid@ al perfil de Micaela</h2>
+            <img src="img/Micaela.jpg" alt="Imagenmicaela">
             <div class="row">
-                <img src="img/Micaela.jpg" alt="Imagenmicaela">
                 <p>Buenas a tod@s!! Mi nombre es Micaela, tengo 26 años y actualmente trabajo y estudio. Aparte de JAP y
                     el
                     inglés
@@ -87,8 +92,8 @@
 
         <section id="Damian" class="secciones">
             <h2 class="h2nombre">Bienvenid@ al perfil de Damian</h2>
+            <img src="img/Damian.jpeg" alt="ImagenDamian">
             <div class="row">
-                <img src="img/Damian.jpeg" alt="ImagenDamian">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
         </section><br>
